--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -42,7 +42,7 @@
     width: 5vw;
     height: 5vh;
     position: absolute;
-    left: 95vw;
+    left: 93vw;
     top: 2vh;
     box-sizing: border-box;
     background-color: black;
