--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -1,10 +1,10 @@
 .sidebar ul{
     margin: 10px;
     position: relative;
-    top: 2vw;
+    top: 1vw;
     background-color:  rgba(11, 11, 11, 0.781);
     height: 100vh;
-    width: 100%;
+    width: 110%;
 }
 .sidebar ul .sidebar-btn {
     display: inline-block;     
@@ -14,7 +14,7 @@
     text-decoration: none;     
     border-radius: 8px;         
     text-align: center;
-    width: 100%;                
+    width: 82%;                
     cursor: pointer;
     margin: 25px;    
     height: 7vh;   
@@ -23,6 +23,7 @@
     flex-direction: column;
     justify-content: space-around;   
     margin-bottom: 10vh;
+   
 }
 
 .sidebar ul .sidebar-btn:hover {
